--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,6 +12,7 @@
     <string name="settings_user_token_message">Token para publicar datos en el servidor</string>
     <string name="version">Versión: %1$s (%2$d)</string>
     <string name="delete">Eliminar</string>
+    <string name="was_deleted">Elemento eliminado</string>
     <string name="share">Compartir</string>
     <string name="stop_button">Detener sesión medidas</string>
     <string name="start_button">Iniciar sesión medidas</string>
