--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     // Generic
-    <string name="app_name">Programa adquisición VIPV</string>
+    <string name="app_name">surCO: Solar Urban Resource Collaboration</string>
     <string name="help">Ayuda</string>
     <string name="icon_help">Icono de ayuda</string>
     <string name="username">Usuario</string>
