--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -55,6 +55,7 @@
     <string name="no_data_to_share">No se puede compartir una sesión vacía</string>
     <string name="session_stopped">Sesión de medida finalizada</string>
     <string name="current_session_share">Compartir sesión en curso</string>
+    <string name="low_compass_precision_title">Baja precisión de la brújula</string>
     <string name="low_compass_precision_message">Por favor, mueva suavemente el télefono en círculos para recalibrar la brújala.</string>
     <string name="beacon_details">Detalles de la baliza</string>
     <string name="beacon_detail_description_hint">Descripción opcional de la baliza</string>
