--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -57,6 +57,7 @@
     <string name="current_session_share">Compartir sesión en curso</string>
     <string name="low_compass_precision_title">Baja precisión de la brújula</string>
     <string name="low_compass_precision_message">Por favor, mueva suavemente el télefono en círculos para recalibrar la brújala.</string>
+    <string name="session_not_active">Primero debes iniciar sesión con tu cuenta.</string>
     <string name="beacon_details">Detalles de la baliza</string>
     <string name="beacon_detail_description_hint">Descripción opcional de la baliza</string>
     <string name="beacon_detail_tilt">Inclinación</string>
