--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="current_session_share">Share current session</string>
     <string name="low_compass_precision_title">Low Compass Precision</string>
     <string name="low_compass_precision_message">Please move your phone gently in circles to recalibrate the compass.</string>
+    <string name="session_not_active">You must log in to your account first.</string>
     // Beacon details view
     <string name="beacon_details">Beacon details</string>
     <string name="beacon_detail_description_hint">Optional beacon description</string>
