--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,8 @@
     </array>
     <string name="settings_bluetooth_scan_interval">Bluetooth Scan Interval</string>
     <string name="settings_bluetooth_scan_interval_invalid">Must be a natural number</string>
+    <string name="settings_bluetooth_scan_interval_summary">Milliseconds</string>
+    <string name="settings_manage_sessions">Manage saved session files</string>
     <string name="settings_open_battery_optimization_settings">Open battery optimization settings</string>
     // About view
     <string name="version">Version: %1$s (%2$d)</string>
