Squashed commit of the following:
commit 6b434f39cc1aad3e11a298624572efc9fa0ff066
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed May 28 22:38:55 2025 +0100

    Update README.md

commit 92959b54b7a9ae1bc6960e4a008cacc034ce71f6
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 23 09:54:34 2025 +0100

    Create LICENSE

commit ecb8812065ae57008e0ab1e8de68f254a61eeeff
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 16:24:05 2025 +0100

    yet another gradle update

commit 82cad081f996ef93b08247613f3709e5165a84fc
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 14:24:34 2025 +0100

    Create README.md

commit 6c5ee96292f6e25de9040dde2496cfdc85c7e40a
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 14:24:30 2025 +0100

    VS Code recommended extension

commit 014df2688938077de9fa65da765f5a4fd96f8e5b
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:38 2025 +0100

    clarify deprecation fix for the future

commit 479055eeb8eae14b28428411d23e007f7025c426
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:26 2025 +0100

    speed up build process

commit f8481c1907b2246f38cf9116d86af105b7f194b9
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu May 22 13:17:12 2025 +0100

    update deps

commit bfb9b6c45d7cba7661c769a2e3aed289704a67b2
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 9 13:35:03 2025 +0100

    Bugfix: beacons counter is not affected on beacon deletion

commit bea860ffdfc52094f293402faefa8242b1a02dbf
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri May 9 13:28:57 2025 +0100

    Sessions Management : observe on cached s

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -120,7 +120,7 @@
         <item>Manualmente</item>
     </array>
     <string name="want_to_use_offline_question">¿Quieres tomar medidas solo para ti?</string>
-    <string name="use_offline">Usar sin cuenta</string>
+    <string name="continue_offline">Continuar sin cuenta</string>
     <string name="beacon_info_incomplete">Añada los campos de información requeridos.</string>
     <string name="beacon_detail_ok">Baliza configurada y comunicándose</string>
     <string name="beacon_detail_info_error">Faltan datos sobre la posición de la baliza</string>
@@ -142,4 +142,9 @@
     <string name="data_recollection_get_in_contact">Para ponerte en contacto con nosotros, para hacer comentarios o para solicitar la eliminación o modificación de tus datos, utiliza alguno de los medios citados al final.\nEsta aplicación comparte la ubicación GPS, la orientación del móvil, medidas de las balizas Bluetooth, el modelo y fabricante del móvil y la versión de Android, en algún momento del tiempo después de que finalice una sesión de medidas.\nLos datos recogidos se tratarán con un fines puramente científicos y que no se compartirá con terceros bajo ningún concepto, a excepción si es solicitado por el mismo usuario o las autoridades competentes.</string>
     <string name="settings_bluetooth_scan_interval_summary">Milisegundos</string>
     <string name="settings_manage_sessions">Gestión sesiones guardadas</string>
+    <string name="delete_all_sessions">Eliminar todas las sesiones</string>
+    <string name="upload_all_sessions">Publicar todas las sesiones</string>
+    <string name="confirm_undonable_action">¿Estás segur@? Esta acción no se puede deshacer.</string>
+    <string name="all_sessions_deleted">Se eliminaron todas las sesiones guardadas</string>
+    <string name="deletion_failed">No se pudieron eliminar todas las sesiones</string>
 </resources>
