--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,9 +149,14 @@
     <string name="notification_no_bluetooth_text">Bluetooth disabled.</string>
     // Misc
     <string name="want_to_use_offline_question">Prefer to take measurements for yourself?</string>
-    <string name="use_offline">Use offline</string>
+    <string name="continue_offline">Continue without account</string>
     // Manage Sessions
     <string name="manage_sessions">Manage cached sessions</string>
     <string name="manage_sessions_no_sessions_available">No sessions are stored locally</string>
     <string name="manage_sessions_sessions_stored">There are %1$d sessions pending for upload</string>
+    <string name="delete_all_sessions">Delete all sessions</string>
+    <string name="upload_all_sessions">Upload all sessions</string>
+    <string name="confirm_undonable_action">Are you sure? This action cannot be undone.</string>
+    <string name="all_sessions_deleted">Deleted all cached sessions</string>
+    <string name="deletion_failed">Can\'t delete all sessions</string>
 </resources>
