Squashed commit of the following:
commit 9d33c5745a92976149aedf168291e67a2575ad92
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 13:28:22 2025 +0100

    version bump

commit ff07e28013248c6302cb1e7b3b63f8e3684971d3
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 13:27:44 2025 +0100

    privacy policy with new api changes

commit c9dc55394e47f4a27719f9067f48ca204de4bf5a
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:38:43 2025 +0100

    warn user on api endpoint change

commit 8520bbc034631597b1c600541bcedd01907fdb8d
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:37:27 2025 +0100

    add more position dropdown options

commit 769bf72e6aed1e4c8376159acca4d3beea798869
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:36:09 2025 +0100

    rename AboutFragment to FragAbout, for consistency

commit 2ae5b8e0e716894ccf0ce114c00bd8fc1b71bf8f
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:35:35 2025 +0100

    logo update

commit d17cacbc95e8dfab67dab65cad7cfbdf01b5966b
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:33:10 2025 +0100

    fix languages not being shown

commit 532e47ebf6fe7fcbcb56b9d7958cebbcf7350ebd
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Jun 9 12:32:56 2025 +0100

    update deps

commit 0e13ee12678403adb250285cb856facddf377f76
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Jun 4 12:54:01 2025 +0100

    clear user session on endpoint change

commit e20f8d092e088609641554e965cb9672fa759664
Author: Echedey Luis Álvarez <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Jun 4 12:53:34 2025 +0100

    renaming

commit 727e372d92

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,6 +12,7 @@
     <string name="settings_bluetooth_scan_interval">Intervalo de escáner Bluetooth</string>
     <string name="settings_bluetooth_scan_interval_invalid">Debe ser un número natural</string>
     <string name="settings_open_battery_optimization_settings">Abrir configuración del optimizador de batería</string>
+    <string name="settings_api_uri_change_message">Cerrarás sesión y tu información personal se compartirá a otro servicio. La Política de Privacidad y otras afirmaciones legales no serán de aplicación.</string>
     <string name="version">Versión: %1$s (%2$d)</string>
     <string name="delete">Eliminar</string>
     <string name="was_deleted">Elemento eliminado</string>
@@ -131,6 +132,8 @@
         <item>Right Door</item>
         <item>Roof</item>
         <item>Trunk</item>
+        <item>Casco (bicicleta)</item>
+        <item>Otro (indicar en descripción)</item>
     </array>
     <string name="uploading_session_data">Subiendo sesiones guardadas…</string>
     <string name="upload_successful">Sesiones subidas</string>
@@ -147,4 +150,10 @@
     <string name="confirm_undonable_action">¿Estás segur@? Esta acción no se puede deshacer.</string>
     <string name="all_sessions_deleted">Se eliminaron todas las sesiones guardadas</string>
     <string name="deletion_failed">No se pudieron eliminar todas las sesiones</string>
+    <string name="privacy_policy_accept">Acepto</string>
+    <string name="privacy_policy_reject">No acepto (usar offline)</string>
+    <string name="privacy_policy_fetching">Obteniendo última Política de Privacidad…</string>
+    <string name="error_loading_privacy_policy">Error al cargar la Política de Privacidad.</string>
+    <string name="privacy_policy_title">Política de Privacidad</string>
+    <string name="settings_api_uri_change_title">Confirma acción</string>
 </resources>
