--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -130,7 +130,7 @@
         <item>Capó</item>
         <item>Puerta izquierda</item>
         <item>Puerta derecha</item>
-        <item>Roof</item>
+        <item>Techo</item>
         <item>Maletero</item>
         <item>Casco (bicicleta)</item>
         <item>Otro (indicar en descripción)</item>
