--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -63,7 +63,7 @@
     <string name="low_compass_precision_title">Baja precisión de la brújula</string>
     <string name="low_compass_precision_message">Por favor, mueva suavemente el télefono en círculos para recalibrar la brújala.</string>
     <string name="session_not_active">Primero debes iniciar sesión con tu cuenta.</string>
-    <string name="client_deprecated_warning_message">Por favor, actualice la app.\nEl servidor recomienda no utilizar esta versión.\nTodavía puedes iniciar sesión y subir sesiones.</string>
+    <string name="client_deprecated_warning_message">El servidor recomienda actualizar.\n¡Tal vez encuentres nuevas súper-mejoras en la última versión!\nTodavía puedes iniciar sesión y subir sesiones.</string>
     <string name="client_obsolete_error_title">Versión obsoleta</string>
     <string name="client_obsolete_error_message">Por favor, actualice la app.\nEsta versión no está admitida por el servidor.\nNo se puede iniciar sesión.</string>
     <string name="beacon_details">Detalles de la baliza</string>
@@ -159,5 +159,5 @@
     <string name="error_loading_privacy_policy">Error al cargar la Política de Privacidad.</string>
     <string name="privacy_policy_title">Política de Privacidad</string>
     <string name="settings_api_uri_change_title">Confirma acción</string>
-    <string name="client_deprecated_warning_title">Actualización recomendada</string>
+    <string name="client_deprecated_warning_title">¡Es momento de actualizar!</string>
 </resources>
